fix(responsive menu): top menu is broken for a mobile
- patch for the « info bulle » of the sponsors messed up the top menu. Fix by restricting the patch to only popups of the sponsors descriptions.

--- a/assets/themes/snowcamp/css/semantic-ui-patch.css
+++ b/assets/themes/snowcamp/css/semantic-ui-patch.css
@@ -1,2 +1,2 @@
 /* patch for https://github.com/Semantic-Org/Semantic-UI/issues/3004 */
-.ui.popup{overflow:auto;}
+.ui.patch.popup{overflow:auto;}
